@@ -1,8 +1,16 @@
 DIST glance-client-3.0.1.jar 18291 SHA256 3dd831e8d94dd13a22388d2d2a80a7046c2e4f42b79c0cd04a753d96faaaf897 SHA512 dbb431457bb59f75e31630a772a6658c12ed6a26fa84b7d830b544c7cc0487376f40a9d364dc34729523275af9d84389f6df824c1ecdf2b4b2dd4728113dcada WHIRLPOOL f99beafbe1e6b8f9d68a8179d71f61ef68022b7c77b2adc6ebcdd2fcfab4def004ca556aba4a3924ad4313df6650afc7280b47821c36e79a6e278fea3f585897
+DIST glance-client-3.0.2.jar 18291 SHA256 21d65cc3fade4b05704f5636cb1dc2735430d4b525fbadc040fb87a7e35fb875 SHA512 c3a9a466e40e43205191b19cb1dc53278e5ee81929490fa6ba77329bcc4bda2b190ac99f52b0274739c03f02a17699d0963b74881d344369267d4722498df32d WHIRLPOOL 018b61b61a1a69f52cabaec9cab7dbab40f6ec394745c11c866b1791df0c6de56934ae12ceb9eb1e8a43d2f6e518d734e0a6c109b517aee4ad2057c469211b6f
 DIST glance-model-3.0.1.jar 8663 SHA256 62ad0cb72f8b963db340277cd195405fdaf3bb6c701851db7f608833e567f033 SHA512 320df3e7131458d57310bffc587b2238e19eefeb912fef1c1d78d3e82e570a9f706dd6711af01f019fcc1a4efe6d9f98a6b7a5402de599bd09e7041b099ef6e2 WHIRLPOOL 9fd33bd1200f73d9e79b75c821bcba7d3024e29858605da54715270894e34d5abded7d4b42066781e7ae144ae663b1c24b2214558b57963ae5e574ace679757e
+DIST glance-model-3.0.2.jar 8663 SHA256 92ef5d7f001a94adef45d0ced2b15330ed44c3efc8fa58c1f616f7926cdbbd17 SHA512 ff87698185708e269f6d006724d3b3a6944f1a4f4ddfdfe8e6cc68044b2ef9c4a41574b7c2d81514b87bb67629daf072ad380c944d0356f475f4aa773d6af767 WHIRLPOOL c83c516af4c5f8357458aabb1f9a8ae5e753a856b8b80288194a3db344ade7a0a94b4ca5fa734cd655c03d282dd79a3e5ac0e68a78c58eaa0811a0e9d6fbbef0
 DIST keystone-client-3.0.1.jar 34713 SHA256 e1b54c82709e5a4a7b14ff846e6f1d6dfb27eeb7b3348da47b6749ff91b3a278 SHA512 ed5a93d8e3305f4309cbb2a5a63e8175d70a809f9b73ef80fd8252284cbc8b2473223c3f797eb21335720e97d77aac8fe129bfb54bf9ae6547c22ae903388003 WHIRLPOOL 8586a96c0e1e9e94a8bb4ab53e85fc47c1eb4b8374950621eeedf7af5eb24acb7bc94058a8b77be7a06b769b25dd41522ad733f878a9ecd647b4e7f16c3320b6
+DIST keystone-client-3.0.2.jar 34712 SHA256 b74fc08fc4a8f78bdf0ce7ab95e92af42e0f957700ebc6731723bcbe6099d70e SHA512 1e15ad9f82929f2243c0709f4dc462a59a52a390cdb85b4793e1d8ae50ae0c2d99ae498f6fb70ab800f083d7991940672af97552a9f65e0ee1751be59bcb8385 WHIRLPOOL 194fa42c176fb2898abaad2f7d9963eb75c856dcf13c1597189c2639bf90ee73dae1c760f50f79afba907c53dac4e81293bad7a9bc59a4d40f34595cacf70c4b
 DIST keystone-model-3.0.1.jar 23096 SHA256 e4f63b6032e8ed8db6a4a37ecdf8e7ff01560b726b9e7b8873bb688f283e1351 SHA512 0cd5d05e3f84f2fffba356db644265fe1a3319a0e3a1ecb24b1edb708f35b5929ed3245e73de6d88060b39200d9817b154143260130fa74e355713618d537be9 WHIRLPOOL 8d60a007a8733efeb156daab73df267f29ea7b8bd31249a354ba3648949d2646f3ffb38b7c2140ecd8ac48872fd27824ddde082789312041c314495d0b20a487
+DIST keystone-model-3.0.2.jar 23095 SHA256 062a5918ec72993e295093c557a3ca3ef9dd35e1f946c3a733528949f2e827f0 SHA512 b5948dc052421257106ba1757bc06f0aa6abe65d25b9e723fca3310fa09b653b3e4683876bb6672c0e634071563d709623f227fc83d4f4c73a64d367f4412435 WHIRLPOOL ef9e37a487e64fab6ca00cabc3bd02afd2934837fd50f9141077ee37b86fb0dee84e10595e164545898f60abc8b49a64486121ca119fa87e8718cf12bbf4c146
 DIST openstack-client-3.0.1.jar 10869 SHA256 95b5e12627557b2f4fb0279d7020311875b2f5330dc040269f44ff14619f5cd5 SHA512 e9311339ea35c47188354fde4a7a18b40ffc066503cc74f2e222239b29d42dbbd8680f39fd09814f45bf6cb22e27f53e5dda98f22ff87df43b707cac84333155 WHIRLPOOL 2039d5ba77a3d9bea87ff791f26f2020173b7dd8b2f157a37a7f4d31844c9a028747ae8e92c93dc47999b4fe6eb6113152e17a7c99b080fc67bb7b04fbfea63e
+DIST openstack-client-3.0.2.jar 10868 SHA256 0765e7c3bf12731a377d83ae57a238faa30da58136762b2bde2e7ea40c99d458 SHA512 a2f4ca5c3a11e66cffd94686799d78909633f6698275b989772ddf4ccdf8908f99007687a240d56391dc597e686f4552243ea5ec2ebd56ea3d05e1ce3bf1880d WHIRLPOOL 2cf30ba00e8686c3230ad7d2b54abb7c8c3758b46c4383648c6fb766a50d5a701e5bf52cab09877ec49f0c52bbf763e61112961f7622f1e0864f46590f8eda59
 DIST quantum-client-3.0.1.jar 17576 SHA256 da8d03940ae6723ad1847c2d7c3fc9ec6a8e7886982917b8bcc8aef5f6de3acf SHA512 a8e21e1aaad4213ed62a0b6de385698152cbb530ab3deab833d26cf0b8f1dd1addecc7e9d6db22ed7c8f766eca616130978b72c78978c48a0eebacd1fbbeeab7 WHIRLPOOL aca7d54f51eb12b22f7a821212e3ab5a1736b408dbf4cc7d852dfad8d8d822b3f42ce10c7367a32f93296ea096c900d512452fbe1222ed1a5f853efa32717ac0
+DIST quantum-client-3.0.2.jar 18414 SHA256 7d1d8eb281e5327d700452dc49a3267b893f734b24e597ab79a2fdf8b567badf SHA512 db0313c765eb6b60cf2c0abfc8f498831c5911ba4f4c63d4f60445d9c4cee5cf9ce04afde9ad5bbff71a76d54571ad131d383b3e5319a66f69dfe24b46200080 WHIRLPOOL 24f1a97056d9b909da991f39531bb076f76bac1fa808c8fa0074e0f2317b717e78ef9160fc9f5f8efebca5226a4a177f87878a952bcc2fef11fac38e49b94958
 DIST quantum-model-3.0.1.jar 15208 SHA256 71f60aae24714196039624d9340f3027347b3239a0cff0d4af2ec5138905a280 SHA512 d8e9712b7ef3e4c8e931a2fbbc5996375fa61e725e84844a94e8957b3b54efabee64c7f3e9714279caeade4a1d0bfd8ab4ea7e9486f6ad6c5a2bb53b5ce8e0e4 WHIRLPOOL 668eb3ad340b64e2431723ed683146bb3ad3b70a62008589d77bd0da22dd241d3f671334f987787b290c4ab98b102030730992356f4e9f99fe22d94b6d53d1e8
+DIST quantum-model-3.0.2.jar 14956 SHA256 1ee2e8430f425a2b459d21fb3da3adf8f344e438ca5b007140b7fc98909267a9 SHA512 13748bb372ad8855d63006b1180858da578eed6a475d3f68a0dfc7bd21e5af76ef06a56850787f67abd7c662a28563779a6a9c5e1a15da23b76b150d1ec300b2 WHIRLPOOL 76f4ccb82dc8e12b346bdbdc633b1600959a90827d02bd5d3ed8f2265060b4131d1dbb862fa1e5c27f7a64307ed20e3772da4cc4430b87baaf21427b31c46bd5
 DIST resteasy-connector-3.0.1.jar 8868 SHA256 4e55ac2534ef8d4da747609161bbe70d62653f1b28c39f784a0f8ffd4a4b4bd7 SHA512 2639458ed74066573d467f8142f05b390ae6960400e750b558e93bf4ce624e37a780513a0b78b2f3b43906458e36b584b73243b006695f069bf61359e435c916 WHIRLPOOL 8d1c37376c8601f9917042f8fbe0b2737d74739a23d4bcee55fc8f643d8d587142ab30703cfba50eb8196324fb99c2b53e4964252d0ecf7db492d711f6794959
+DIST resteasy-connector-3.0.2.jar 8912 SHA256 941fbed175853e8ccc0561529430ffae1d2d9aa2945f30a19803b041ebade7bf SHA512 7062d7957f9d2de0fdc884c3bbfaad62c50748d447a0b783767cf8266ba83e52e7a8036b95b8304ea7beadb6bf30f5dc8a3169f46f1b4501b9bfa7bd7c5650b5 WHIRLPOOL d7a1a05500ad475bb71c929a4c9cab2b12dac8cfc9312bf4228d51d8e14a596fc02ecb8d9a2ed60fc25ec9f107999c049acef89ddbcc6649ccee82342d94727e
